--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -77,7 +77,7 @@ bindsym $mod+d exec dmenu_run
 #bindsym $mod+semicolon focus right
 
 #lock
-bindsym $mod+l exec i3lock
+bindsym $mod+l exec ~/.config/i3/lock.sh
 
 # alternatively, you can use the cursor keys:
 bindsym $mod+Left focus left
